<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/new_pattern"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:text="@string/enter_a_number"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/bordere_alert_edittext"
        android:orientation="vertical">

        <EditText
            android:id="@+id/width"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="8dp"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/width"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#808080" />

        <EditText
            android:id="@+id/height"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="8dp"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/height"
            android:inputType="number" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#808080" />

        <Button
            android:id="@+id/done"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/done"
            android:textColor="@color/colorAccent" />
    </LinearLayout>
</LinearLayout>