<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/privacy_policy"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/privacy_policy_information"
        android:textColor="@android:color/black"
        android:textSize="16sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080" />
    <Button
        android:id="@+id/closePP"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:text="@string/ok"
        android:textColor="@color/colorAccent" />
</LinearLayout>